Fixded bug with maps api, fixed alignment with github.html and nav divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 /*--------------------------------------------Colors*/
 
 .bg-color-name-title {
-    background-color: #676767;
+    background-color: #e1e7ec;
 }
 
 .bg-color-three-reasons {
@@ -39,15 +39,15 @@
 }
 
 .ui-menu-color-home {
-    background-color: #e67e22;
+    background-color: #06361e;
 }
 
 .ui-menu-color-resume {
-    background-color: #9b59b6;
+    background-color: #9b5e0f;
 }
 
 .ui-menu-color-contact {
-    background-color: #3498db;
+    background-color: #E9EBF8;
 }
 
 .ui-menu-color-download {
@@ -56,11 +56,11 @@
 
 
 .ui-menu-color-github {
-    background-color: #1c4a6c;
+    background-color: #1a5685;
 }
 
 .ui-menu-color-interests {
-    background-color: #e74c3c;
+    background-color: #396569;
 }
 
 
